--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,9 +43,41 @@ jobs:
         JWT_SECRET: test-secret
       run: npm test
 
+  frontend-test:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Use Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+        cache: 'npm'
+        cache-dependency-path: frontend/package-lock.json
+        
+    - name: Install Frontend Dependencies
+      working-directory: ./frontend
+      run: npm ci
+      
+    - name: Run Frontend Unit Tests
+      working-directory: ./frontend
+      run: npm test
+      
+    - name: Build Production Bundle
+      working-directory: ./frontend
+      run: npm run build
+      
+    - name: Upload Build Artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: frontend-build
+        path: frontend/dist/
+        retention-days: 7
+
   e2e-test:
     runs-on: ubuntu-latest
-    needs: backend-test
+    needs: [backend-test, frontend-test]
     
     services:
       mongodb:
@@ -103,3 +135,25 @@ jobs:
         name: playwright-report
         path: frontend/playwright-report/
         retention-days: 30
+
+  docker-build:
+    runs-on: ubuntu-latest
+    needs: [backend-test, frontend-test]
+    
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Build Backend Docker Image
+      run: docker build -t game2d-backend ./backend
+      
+    - name: Build Frontend Docker Image
+      run: docker build -t game2d-frontend ./frontend
+      
+    - name: Test Docker Compose
+      run: |
+        docker-compose build
+        docker-compose up -d mongodb backend frontend
+        sleep 10
+        curl -f http://localhost:3001/api/health || exit 1
+        docker-compose down
+
