--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,33 @@
-FROM node:20-alpine
-
+# Build stage
+FROM node:20-alpine AS builder
 WORKDIR /app
-
 COPY package*.json ./
 RUN npm ci --only=production
 
+# Production stage
+FROM node:20-alpine
+WORKDIR /app
+
+# Create non-root user for security
+RUN addgroup -g 1001 -S nodejs && \
+    adduser -S nodejs -u 1001
+
+# Copy dependencies
+COPY --from=builder /app/node_modules ./node_modules
 COPY . .
 
+# Set ownership
+RUN chown -R nodejs:nodejs /app
+USER nodejs
+
+# Environment
+ENV NODE_ENV=production
+ENV PORT=3001
+
 EXPOSE 3001
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+    CMD node -e "require('http').get('http://localhost:3001/api/health', (r) => process.exit(r.statusCode === 200 ? 0 : 1))"
 
 CMD ["node", "src/index.js"]
