--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,12 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
     "pixi.js": "^8.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
