--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "jest": "^29.7.0",
-    "supertest": "^7.1.4"
+    "supertest": "^7.1.4",
+    "wait-on": "^9.0.3"
   }
 }
