--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -110,7 +110,7 @@ jobs:
         MONGODB_URI: mongodb://127.0.0.1:27017/game2d_e2e
         PORT: 3001
         JWT_SECRET: test-secret
-        NODE_ENV: test
+        NODE_ENV: development
       run: |
         npm run seed
         nohup npm start > backend.log 2>&1 &
